start yandex map

--- a/front/assets/css/style.css
+++ b/front/assets/css/style.css
@@ -1,11 +1,9 @@
-table {
-    border-collapse: collapse;
-}
-
-th {
-    border: 1px solid black;
-}
-
-td {
-    border: 1px solid black;
-}
+#map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
