--- a/front/assets/css/master.css
+++ b/front/assets/css/master.css
@@ -166,37 +166,13 @@ form input[type=button]:active, input[type=submit]:active, input[type=reset]:act
   transform: scale(0.95);
 }
 
-form input[type=text] {
-  background-color: #f6f6f6;
-  color: #0d0d0d;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 3px;
-  width: 85%;
-  border: 2px solid #f6f6f6;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
-}
-
-form input[type=text]:focus {
-  background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
-}
-
-form input[type=text]:placeholder {
-  color: #cccccc;
+.btn-submit button{
+  color: white;
 }
 
 .paymentWrap {
-  padding: 50px;
+  text-align: center;
+  padding: 5px 0 25px 0;
 }
 
 .paymentWrap .paymentBtnGroup {
