--- a/front/assets/css/style.css
+++ b/front/assets/css/style.css
@@ -84,15 +84,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       display: none; }
 
 /* line 24, ../scss/_partials/_main.scss */
+#container {
+  height: 100%; }
+  /* line 26, ../scss/_partials/_main.scss */
+  #container #map {
+    width: 100%;
+    height: 100%; }
+
+/* line 32, ../scss/_partials/_main.scss */
 .filters {
   position: absolute;
   top: 110px;
   left: 45%;
   z-index: 1000; }
-  /* line 31, ../scss/_partials/_main.scss */
+  /* line 39, ../scss/_partials/_main.scss */
   .filters .select-type {
     float: left;
     margin-right: 30px; }
-  /* line 36, ../scss/_partials/_main.scss */
+  /* line 44, ../scss/_partials/_main.scss */
   .filters .map-filter {
     float: right; }
