--- a/front/assets/scss/_partials/_main.scss
+++ b/front/assets/scss/_partials/_main.scss
@@ -21,6 +21,14 @@
 
 }
 
+#container{
+    height: 100%;
+    & #map{
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .filters{
     position: absolute;
     top: 110px;
