--- a/front/assets/css/style.css
+++ b/front/assets/css/style.css
@@ -104,3 +104,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   /* line 44, ../scss/_partials/_main.scss */
   .filters .map-filter {
     float: right; }
+
+/* line 49, ../scss/_partials/_main.scss */
+.hide {
+  display: none !important; }
