--- a/front/assets/css/master.css
+++ b/front/assets/css/master.css
@@ -170,6 +170,43 @@ form input[type=button]:active, input[type=submit]:active, input[type=reset]:act
   color: white;
 }
 
+.filterWrap{
+  padding: 3%;
+}
+
+.nopad {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.image-checkbox {
+  cursor: pointer;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: 3px solid transparent;
+  margin-bottom: 0;
+  outline: 0;
+}
+.image-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.image-checkbox-checked {
+  border-color: #4783B0;
+}
+.image-checkbox .fa {
+  position: absolute;
+  color: #4A79A3;
+  background-color: #ccc;
+  padding: 3px;
+  top: 0;
+  right: 0;
+}
+.image-checkbox-checked .fa {
+  display: block !important;
+}
+
 .paymentWrap {
   text-align: center;
   padding: 5px 0 25px 0;
