--- a/front/assets/css/master.css
+++ b/front/assets/css/master.css
@@ -78,8 +78,7 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 
 #sidebar ul p {
@@ -91,6 +90,7 @@ a[data-toggle="collapse"] {
     padding: 10px;
     font-size: 1.1em;
     display: block;
+    border-top: 1px groove #eee;
     border-bottom: 1px groove #eee;
 }
 #sidebar ul li a:hover {
@@ -189,27 +189,53 @@ form input[type=button]:active, input[type=submit]:active, input[type=reset]:act
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  border: 3px solid transparent;
+  border: 2px solid transparent;
   margin-bottom: 0;
   outline: 0;
 }
-.image-checkbox input[type="checkbox"] {
-  display: none;
-}
 
 .image-checkbox-checked {
-  border-color: #4783B0;
+  border-color: #007bff;
 }
-.image-checkbox .fa {
-  position: absolute;
-  color: #4A79A3;
-  background-color: #ccc;
-  padding: 3px;
-  top: 0;
-  right: 0;
+
+.custom-control.image-checkbox {
+  position: relative;
+  padding-left: 0;
 }
-.image-checkbox-checked .fa {
-  display: block !important;
+
+.custom-control.image-checkbox .custom-control-input:checked ~ .custom-control-label:after, .custom-control.image-checkbox .custom-control-input:checked ~ .custom-control-label:before {
+  opacity: 1;
+}
+
+.custom-control.image-checkbox label {
+  cursor: pointer;
+}
+
+.custom-control.image-checkbox label:before {
+  border-color: #007bff;
+  background-color: #007bff;
+}
+
+.custom-control.image-checkbox label:after, .custom-control.image-checkbox label:before {
+  transition: opacity .3s ease;
+  opacity: 0;
+  left: .25rem;
+}
+
+.custom-control.image-checkbox label:focus, .custom-control.image-checkbox label:hover {
+  opacity: .8;
+}
+
+.custom-control.image-checkbox label img {
+  border-radius: 2.5px;
+}
+
+.form-group-image-checkbox.is-invalid label {
+  color: #dc3545;
+}
+
+.form-group-image-checkbox.is-invalid .invalid-feedback {
+  display: block;
 }
 
 .paymentWrap {
