--- a/front/assets/css/sb-admin-2.css
+++ b/front/assets/css/sb-admin-2.css
@@ -79,6 +79,10 @@ hr {
   overflow: visible;
 }
 
+.boldy{
+  border-top: 1px solid rgba(0,0,0,1);
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -109,7 +113,7 @@ address {
 ol,
 ul,
 dl {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -117,6 +121,7 @@ ol ol,
 ul ul,
 ol ul,
 ul ol {
+  margin-top: 0 !important;
   margin-bottom: 0;
 }
 
